--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,4 @@
+<mat-toolbar color="primary">CorporateHomez</mat-toolbar>
 <div id="logreg-forms">
     <form class="form-signin">
         <h1 class="h3 mb-3 font-weight-normal" style="text-align: center">
