--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,16 +1,11 @@
 <mat-toolbar color="primary">CorporateHomez</mat-toolbar>
-<div id="logreg-forms">
-    <form class="form-signin">
-        <h1 class="h3 mb-3 font-weight-normal" style="text-align: center">
-            Sign in with
-        </h1>
-        <div class="social-login">
-            <hr />
-            <button (click) = "login()" class="btn google-btn social-btn" type="button">
-                <span><i class="fab fa-google"></i> Sign In With Google</span>
-            </button>
-        </div>
-    </form>
-</div>
+
+<br>
+<mat-card class="example-card">
+    
+    <mat-card-actions>
+        <button mat-button (click) = "login()">Sign In With Google</button>
+    </mat-card-actions>
+</mat-card>
 
 <ng-container *ngIf="login$ | async"></ng-container>
