--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
         <div>
             <button mat-button [routerLink]="['/home']">Home</button>
             <button mat-button [routerLink]="['/profile']">My Profile</button>
-            <button mat-button>Create Listing</button>
+            <button mat-button [routerLink]="['/listing']">Create Listing</button>
             <button (click) = "logout()" mat-button>Sign Out</button>
         </div>
     </mat-toolbar-row>
