--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -1,3 +1,20 @@
 .flexExpand {
     flex: 1 1 auto;
 }
+
+.profile-card{
+    text-align: center;
+    width: 18%;
+    padding: auto;
+    margin: auto;
+}
+
+.profile-card-title{
+    position: relative;
+    margin: auto;
+    padding-top: 3%;
+}
+
+.profile-pic{
+    padding-bottom: 6%;
+}
